code refactoring department tree grid component