@@ -6,9 +6,17 @@ import com.company.demo.view.main.MainView;
 import com.vaadin.flow.data.value.ValueChangeMode;
 import com.vaadin.flow.router.Route;
 import io.jmix.flowui.component.SupportsTypedValue;
+import io.jmix.flowui.component.grid.TreeDataGrid;
 import io.jmix.flowui.component.textfield.TypedTextField;
+import io.jmix.flowui.model.CollectionContainer;
 import io.jmix.flowui.model.CollectionLoader;
 import io.jmix.flowui.view.*;
+
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Route(value = "orgstructure", layout = MainView.class)
 @ViewController(id = "demo_OrgStructure")
@@ -23,9 +31,14 @@ public class OrgStructureView extends StandardView {
 
     @ViewComponent
     private CollectionLoader<Department> departmentsDl;
-
+    @ViewComponent
+    private CollectionContainer<Department> departmentsDc;
     @ViewComponent
     private CollectionLoader<Employee> employeesDl;
+    @ViewComponent
+    private TreeDataGrid<Department> departmentsTreeDataGrid;
+
+    private List<Department> allDepartments;
 
     @Subscribe
     public void onInit(InitEvent event) {
@@ -35,19 +48,34 @@ public class OrgStructureView extends StandardView {
 
     @Subscribe
     public void onBeforeShow(final BeforeShowEvent event) {
-        
+        departmentsDl.load();
+    }
+
+    @Subscribe(id = "departmentsDl", target = Target.DATA_LOADER)
+    public void onDepartmentsDlPostLoad(final CollectionLoader.PostLoadEvent<Department> e) {
+        allDepartments = new ArrayList<>(departmentsDc.getItems());
     }
 
     @Subscribe("departmentSearchField")
     public void onDepartmentSearchFieldTypedValueChange(final SupportsTypedValue.TypedValueChangeEvent<TypedTextField<String>, String> e) {
+        List<Department> departments = departmentsDc.getMutableItems();
+        departments.clear();
+
         String searchTerm = e.getValue();
-        if (searchTerm == null || searchTerm.trim().isEmpty()) {
-            departmentsDl.setQuery("select e from demo_Department e");
-        } else {
-            departmentsDl.setQuery("select e from demo_Department e where lower(e.name) like :search");
-            departmentsDl.setParameter("search", "%" + searchTerm.toLowerCase() + "%");
+        if (searchTerm == null || searchTerm.isBlank()) {
+            departments.addAll(allDepartments);
+            expandDepartmentTreeAllNodes();
+            return;
         }
-        departmentsDl.load();
+
+        Set<Department> result = allDepartments.stream()
+                .filter(d ->
+                        d.getName() != null && d.getName().toLowerCase().contains(searchTerm.toLowerCase()))
+                .flatMap(d -> collectWithParents(d).stream())
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+
+        departments.addAll(result);
+        expandDepartmentTreeAllNodes();
     }
 
     @Subscribe("employeeSearchField")
@@ -55,6 +83,7 @@ public class OrgStructureView extends StandardView {
         String searchTerm = e.getValue();
         if (searchTerm == null || searchTerm.trim().isEmpty()) {
             employeesDl.setQuery("select e from demo_Employee e");
+            employeesDl.removeParameter("search");
         } else {
             employeesDl.setQuery("select e from demo_Employee e where lower(e.firstName) like :search or lower(e.lastName) like :search");
             employeesDl.setParameter("search", "%" + searchTerm.toLowerCase() + "%");
@@ -62,5 +91,17 @@ public class OrgStructureView extends StandardView {
         employeesDl.load();
     }
 
-    
+    private Set<Department> collectWithParents(Department d) {
+        Set<Department> result = new LinkedHashSet<>();
+        while (d != null) {
+            result.add(d);
+            d = d.getParentDepartment();
+        }
+        return result;
+    }
+
+    private void expandDepartmentTreeAllNodes() {
+        departmentsDc.getItems().forEach(departmentsTreeDataGrid::expand);
+    }
+
 }
